# Socket

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/include/: sServer.h
lib/src/: sServer.cpp
test/: Server.cpp
